==> VasanthR6899/Rapid-IoT-Prototyping-using-Micropython/firmware/src/same54p20a_mp/machine_pin.c <==
#include "py/runtime.h"
#include "board.h"
#include "extmod/virtpin.h"
#include "py/mphal.h"
#include "modmachine.h"
#include "definitions.h"
#include "port/same54p20a/same54p20a_gpio.h"
#include "shared/runtime/mpirq.h"
#define GPIO_NUM_8 8
#define GPIO_NUM_9 9
#define GPIO_NUM_10 10
#define GPIO_NUM_11 11
#define GPIO_NUM_12 12
#define GPIO_NUM_13 13
#define GPIO_NUM_14 14
#define GPIO_NUM_15 15
#define GPIO_NUM_16 16
#define GPIO_NUM_17 17
#define GPIO_NUM_18 18
#define GPIO_NUM_34 34
#define GPIO_NUM_35 35
#define GPIO_NUM_41 41
#define GPIO_NUM_42 42
#define GPIO_NUM_44 44
#define GPIO_NUM_45 45
#define GPIO_NUM_46 46
#define GPIO_NUM_47 47
#define GPIO_NUM_48 48
#define GPIO_NUM_49 49
#define GPIO_NUM_72 72
#define GPIO_NUM_122 122
#define GPIO_MODE_IN (0)
#define GPIO_MODE_OUT (1)
#define GPIO_MODE_OPEN_DRAIN (2)
#define GPIO_PULL_UP (0)
#define GPIO_PULL_DOWN (1)
#define GPIO_PIN_INTR_NEGEDGE (0)
#define GPIO_PIN_INTR_POSEDGE (1)
#define GPIO_PIN_INTR_LOLEVEL (2)
#define GPIO_PIN_INTR_HILEVEL (3)

STATIC mp_obj_t machine_pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 0, 1, false);
    machine_pin_obj_t *self = self_in;
    
    if (n_args == 0) {
        // get pin
        return MP_OBJ_NEW_SMALL_INT(gpio_get_level(self->port, self->pin));
    } else {
        // set pin
        gpio_put(self->port, self->pin, mp_obj_is_true(args[0]));
        return mp_const_none;
    }
}

STATIC mp_obj_t machine_pin_obj_init_helper(const machine_pin_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    enum { ARG_mode, ARG_pull, ARG_value };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_mode, MP_ARG_OBJ, {.u_obj = mp_const_none}},
        { MP_QSTR_pull, MP_ARG_OBJ, {.u_obj = MP_OBJ_NEW_SMALL_INT(-1)}},
        { MP_QSTR_value, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = MP_OBJ_NULL}},
    };

    // parse args
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    // configure mode
    if (args[ARG_mode].u_obj != mp_const_none) {
        mp_int_t mode = mp_obj_get_int(args[ARG_mode].u_obj);
        if (mode == GPIO_MODE_IN) {
            gpio_set_dir(self->port, self->pin, GPIO_MODE_IN);
        } else if (mode == GPIO_MODE_OUT) {
            gpio_set_dir(self->port, self->pin, GPIO_MODE_OUT);
        } else if (mode == GPIO_MODE_OPEN_DRAIN) {
            //To do
        } else {
            // Alternate function.
        }
    }

    // set initial value (do this before configuring mode/pull)
    if (args[ARG_value].u_obj != MP_OBJ_NULL) {
        gpio_put(self->port, self->pin, mp_obj_is_true(args[ARG_value].u_obj));
    }

    return mp_const_none;
}

mp_obj_t mp_pin_make_new(const mp_obj_type_t *type, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 1, MP_OBJ_FUN_ARGS_MAX, true);

    // get the wanted pin object
    int wanted_pin = mp_obj_get_int(args[0]);
    const machine_pin_obj_t *self = NULL;
    if (0 < wanted_pin && wanted_pin < MP_ARRAY_SIZE(machine_pin_obj)) {
        self = (machine_pin_obj_t *)&machine_pin_obj[wanted_pin-1];
    }
    if (self == NULL || self->base.type == NULL) {
        mp_raise_ValueError(MP_ERROR_TEXT("invalid pin"));
    }

    if (n_args > 1 || n_kw > 0) {
        // pin mode given, so configure this GPIO
        mp_map_t kw_args;
        mp_map_init_fixed_table(&kw_args, n_kw, args + n_args);
        machine_pin_obj_init_helper(self, n_args - 1, args + 1, &kw_args);
    }
    
    interrupt_callback_handler[0] = interrupt0_callback_handler;
    interrupt_callback_handler[1] = interrupt1_callback_handler;
    interrupt_callback_handler[2] = interrupt2_callback_handler;
    interrupt_callback_handler[3] = interrupt3_callback_handler;
    interrupt_callback_handler[4] = interrupt4_callback_handler;

    return MP_OBJ_FROM_PTR(self);
}

STATIC mp_obj_t machine_pin_off(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    if(LED_STATUS_PRINT)
    SYS_CONSOLE_PRINT ("LED on  (Pin PC%u off)\r\n", self->pin);
#ifdef SAME54P20A_DEBUG   
    SYS_CONSOLE_PRINT("machine_pin_off Pin(%u)\r\n", self->id);
#endif    
    gpio_put(self->port, self->pin, 0);
    return mp_const_none;
}

STATIC mp_obj_t machine_pin_on(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    if(LED_STATUS_PRINT)
    SYS_CONSOLE_PRINT ("LED off (Pin PC%u on)\r\n", self->pin);
#ifdef SAME54P20A_DEBUG 
    SYS_CONSOLE_PRINT("machine_pin_on Pin(%u)\r\n", self->id);
#endif
    gpio_put(self->port, self->pin, 1);
    return mp_const_none;
}

STATIC mp_obj_t machine_pin_irq(size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    enum { ARG_handler, ARG_trigger };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_handler, MP_ARG_OBJ, {.u_obj = mp_const_none} },
        { MP_QSTR_trigger, MP_ARG_INT, {.u_int = GPIO_PIN_INTR_POSEDGE | GPIO_PIN_INTR_NEGEDGE} },
    };
    
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(pos_args[0]);
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args - 1, pos_args + 1, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    machine_pin_irq_obj_t *irq_obj = MP_STATE_PORT(machine_pin_irq_objects[self->irq_chan]);
    
    if (n_args > 1 || kw_args->used != 0) {
        // configure irq
        mp_obj_t handler = args[ARG_handler].u_obj;
        uint32_t trigger = args[ARG_trigger].u_int;
        
        if (irq_obj != NULL) {
                machine_pin_obj_t *irq_pin = irq_obj->base.parent;
                if (irq_pin->id != self->id)
                {
                    SYS_CONSOLE_PRINT("IRQ pin is already set, skip this setting\r\n");
                    return mp_const_none;
                }
        }
        
        // Configure IRQ.
        // Disable all IRQs while data is updated.
        gpio_irq_disable(self->irq_chan);
        gpio_set_irq(self->pin, self->irq_chan, self->irq_id, trigger, interrupt_callback_handler[self->irq_chan]);
        
        if (irq_obj == NULL) {
            irq_obj = m_new_obj(machine_pin_irq_obj_t);
            irq_obj->base.base.type = &mp_irq_type;
            irq_obj->base.methods = NULL;
            irq_obj->base.parent = MP_OBJ_FROM_PTR(self);
            irq_obj->base.handler = mp_const_none;
            irq_obj->base.ishard = false;
            MP_STATE_PORT(machine_pin_irq_objects[self->irq_chan]) = irq_obj;
        }
        // Update IRQ data.
        irq_obj->base.handler = args[ARG_handler].u_obj;
        irq_obj->flags = 1;
        irq_obj->trigger = args[ARG_trigger].u_int;
        // Enable IRQ if a handler is given.
        if (args[ARG_handler].u_obj != mp_const_none) {
            gpio_irq_enable(self->irq_chan);
        }
    }
    

    // return the irq object
    return MP_OBJ_FROM_PTR(irq_obj);
}
